    the sender.
 -- Added NO_PARSE attribute flag to control whether $-commands and
    ^-listens match the evaluated or unevaluated input.
 -- @program now traverses an object's parents for the requested
    attribute.
 -- Fixed @mail/fwd to evalute the postpended and prepended text without
    evaluating the forwarded text.
 -- Added the local.cpp patch surface. Details in LOCAL readme.


Bug Fixes:
~~~~~~~~~
 -- Solaris build needed a missing HAVE_FCNTL_H.
 -- First argument argument of udefault(), edefault(), and default()
    supported <dbref>/<attrname>, but not just <attrname>.  But
    introduced in MUX 2.2 timeframe.
 -- While the server hasn't allowed mail aliases (@malias) larger than
    100 members for awhile, it did not protect itself properly against
    mail aliases saved in older mail.db files.
 -- @backup now works with MEMORY_BASED build.
 -- Added missing @fsay help topic.
 -- Added more messages to @destroy/instant path.
 -- Guest attributes weren't being wiped as intended.
 -- Fixed @hook IGSWITCH again.  This time, the bug is related to the
    search_nametab() interface.
 -- Fix @notify/foo123 where foo123 is a never-before-used attributes.
    Legacy bug from MUX 1.6.
 -- Tightend up command piping to log expensive piped commands and also
    improve the interaction with @break and lag_limit.
 -- Fixed bug in MIX() where '&mixit me=(%0|%1);think mix(mixit,0 1,1)'
    gives '(0|1)' instead of '(0|1) (1|)'.  It wasn't determining the
    length of the first list correctly.
 -- Allow code on rooms to use @oemit.
 -- Move initialization of time code further up so that the logging
    code creates the right timestamp.
 -- @dbck started fixing quotas in MUX 2.3, but this is too expensive
    to do routinely.
 -- Locks failed to evaluate properly after a dbref within the lock was
    @destroy.
 -- Add ',()^$' to the set of characters escaped by ESCAPE().
 -- Fix unlikely but reproducible case of hanging @dump/@backup.